force-app/main/default/objects/Opportunity/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <description>Billing State for Opportunity from Account Record</description>
    <formula>Account.BillingState</formula>
    <inlineHelpText>Billing State for Opportunity from Account Record</inlineHelpText>
    <label>Account State</label>
    <type>Text</type>
</CustomField>