force-app/main/default/objects/Opportunity/fields/Activation_Level__c.field-meta.xml
<CustomField>
    <fullName>Activation_Level__c</fullName>
    <formula>if((Or(ISPICKVAL(Account.Type,&#39;School - 2 Year Public&#39;),ISPICKVAL(  Account.Type  , &#39;School - Voc or Tech&#39;))),if(Full_Time_Enrollment__c&gt;0,Account.Total_Members_Activated__c/Full_Time_Enrollment__c,0)	,if(Total_in_Enrollment__c&gt;0,Account.Total_Members_Activated__c/Total_in_Enrollment__c,0))</formula>
    <label>Activation Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>