force-app/main/default/objects/Opportunity/fields/Activation_Reward_Discount__c.field-meta.xml
<CustomField>
    <fullName>Activation_Reward_Discount__c</fullName>
    <formula>IF(Activation_Level__c  &lt;  0.2,0,
(IF(Activation_Level__c  &gt;= 0.2  &amp;&amp;  Activation_Level__c  &lt; 0.3, 0.10,
(IF(Activation_Level__c  &gt;= 0.3  &amp;&amp;  Activation_Level__c  &lt; 0.4,0.15,
(IF(Activation_Level__c  &gt;= 0.4  &amp;&amp;  Activation_Level__c  &lt; 0.5,0.20,
(IF(Activation_Level__c   &gt;=  0.5, 0.25,0)
))))))))</formula>
    <label>Activation Reward Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>