force-app/main/default/objects/Opportunity/fields/Aggregator_Discount__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated_Aggregator Discount</label>
    <type>Checkbox</type>
</CustomField>