force-app/main/default/objects/Opportunity/fields/Aggregator_Group__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Group__c</fullName>
    <label>Aggregator Group</label>
    <type>TextArea</type>
</CustomField>