force-app/main/default/objects/Opportunity/fields/Aggregator_Name__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aggregator Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>012300000000RgX</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Aggregator</value>
        </filterItems>
        <filterItems>
            <field>Account.Approved__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <filterItems>
            <field>Account.ByPassAggregatorFilter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>