force-app/main/default/objects/Opportunity/fields/Budget_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cycle__c</fullName>
    <description>Date the annual budget begins</description>
    <inlineHelpText>Date the annual budget begins</inlineHelpText>
    <label>Budget Cycle</label>
    <type>Date</type>
</CustomField>