force-app/main/default/objects/Opportunity/fields/ByPassRolloverWFRules__c.field-meta.xml
<CustomField>
    <fullName>ByPassRolloverWFRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassRolloverWFRules</label>
    <type>Checkbox</type>
</CustomField>