force-app/main/default/objects/Opportunity/fields/Campus_Engagement_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Campus_Engagement_Meeting__c</fullName>
    <label>Campus Engagement Meeting</label>
    <type>Date</type>
</CustomField>