force-app/main/default/objects/Opportunity/fields/Campus_offices_involved__c.field-meta.xml
<CustomField>
    <fullName>Campus_offices_involved__c</fullName>
    <description>What campus offices were involved in the buying decision.</description>
    <inlineHelpText>Please select which offices on campus were involved in the buying decision.</inlineHelpText>
    <label>Campus offices involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Win__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Student Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>