force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF ( INCLUDES ( Account.Category__c  , &quot;Christian Colleges &amp; Universities&quot; ), &quot;Christian Colleges &amp; Universities; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Historical Black Colleges &amp; Universities&quot; ), &quot;Historical Black Colleges &amp; Universities; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Law School&quot; ), &quot;Law School; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Medical School&quot; ), &quot;Medical School; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Corporate Account&quot; ), &quot;Corporate Account; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>