force-app/main/default/objects/Opportunity/fields/Comments_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Comments_Contract_Status__c</fullName>
    <label>Deprecated Comments:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>