force-app/main/default/objects/Opportunity/fields/Competitor_s__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s__c</fullName>
    <label>Deprecated Competitor(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECMC</fullName>
            </value>
            <value>
                <fullName>Ed Financial Services</fullName>
            </value>
            <value>
                <fullName>EverFi/Buttonwood</fullName>
            </value>
            <value>
                <fullName>Financial Aid TV</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>I3/Loan Look</fullName>
            </value>
            <value>
                <fullName>IGrad</fullName>
            </value>
            <value>
                <fullName>Inceptia</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TG</fullName>
            </value>
            <value>
                <fullName>USA Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>