force-app/main/default/objects/Opportunity/fields/Contract_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Contact_Email__c</fullName>
    <formula>Contract_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Contact Email</label>
    <type>Text</type>
</CustomField>