force-app/main/default/objects/Opportunity/fields/Contract_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contract_Contact_Fax__c</fullName>
    <formula>Contract_Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Contact Fax</label>
    <type>Text</type>
</CustomField>