force-app/main/default/objects/Opportunity/fields/Contract_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Contact_Title__c</fullName>
    <formula>Contract_Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Contact Title</label>
    <type>Text</type>
</CustomField>