force-app/main/default/objects/Opportunity/fields/Contract_has_been_created__c.field-meta.xml
<CustomField>
    <fullName>Contract_has_been_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Has Been Created</label>
    <type>Checkbox</type>
</CustomField>