force-app/main/default/objects/Opportunity/fields/Contract_Negotiation_ASA_Reviewing__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation_ASA_Reviewing__c</fullName>
    <label>Contract Negotiation - ASA Reviewing</label>
    <type>Date</type>
</CustomField>