force-app/main/default/objects/Opportunity/fields/Contract_Negotiations_School_Reviewing__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiations_School_Reviewing__c</fullName>
    <label>Contract Negotiations - School Reviewing</label>
    <type>Date</type>
</CustomField>