force-app/main/default/objects/Opportunity/fields/Contract_Requested_In_Process_Internally__c.field-meta.xml
<CustomField>
    <fullName>Contract_Requested_In_Process_Internally__c</fullName>
    <label>Contract Requested-In Process Internally</label>
    <type>Date</type>
</CustomField>