force-app/main/default/objects/Opportunity/fields/Contract_SOW__c.field-meta.xml
<CustomField>
    <fullName>Contract_SOW__c</fullName>
    <label>Deprecated Contract/SOW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>