force-app/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>RAE&#39;s fill out this field - shared between school channel, guarantor and grant/sublease.</description>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Requested</fullName>
            </value>
            <value>
                <fullName>Contract Requested</fullName>
            </value>
            <value>
                <fullName>Contract Submitted to Client</fullName>
            </value>
            <value>
                <fullName>ASA review Client edits</fullName>
            </value>
            <value>
                <fullName>Client review ASA edits</fullName>
            </value>
            <value>
                <fullName>Agreement Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>