force-app/main/default/objects/Opportunity/fields/Contract_Submitted_In_School_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Submitted_In_School_Review__c</fullName>
    <label>Contract Submitted-In School Review</label>
    <type>Date</type>
</CustomField>