force-app/main/default/objects/Opportunity/fields/Contract_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Terms__c</fullName>
    <label>Deprecated Contract Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>