force-app/main/default/objects/Opportunity/fields/ConvertedLeadEmail__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadEmail__c</fullName>
    <label>ConvertedLeadEmail</label>
    <type>Email</type>
</CustomField>