force-app/main/default/objects/Opportunity/fields/Create_Rollover_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Create_Rollover_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Rollover Oppty</label>
    <type>Checkbox</type>
</CustomField>