force-app/main/default/objects/Opportunity/fields/Current_EDM_activities_performed__c.field-meta.xml
<CustomField>
    <fullName>Current_EDM_activities_performed__c</fullName>
    <label>Current EDM activities performed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>