force-app/main/default/objects/Opportunity/fields/Current_FE_activities_performed__c.field-meta.xml
<CustomField>
    <fullName>Current_FE_activities_performed__c</fullName>
    <label>Current FE activities performed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>