force-app/main/default/objects/Opportunity/fields/Engagement_Partner_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Partner_Abbreviation__c</fullName>
    <inlineHelpText>Enter the abbreviation name for the Engagement Partner - to be used within Proposal merge process.</inlineHelpText>
    <label>Engagement Partner Abbreviation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>