force-app/main/default/objects/Opportunity/fields/Estimated_Usage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Usage__c</fullName>
    <inlineHelpText>Select the expected usage (by percent) based on the Estimated Membership number.</inlineHelpText>
    <label>Estimated Usage %</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>