force-app/main/default/objects/Opportunity/fields/Executed_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Executed_Contract_Received__c</fullName>
    <label>Deprecated Executed Contract Received</label>
    <type>Date</type>
</CustomField>