force-app/main/default/objects/Opportunity/fields/ffr__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>ffr__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT TO PACKAGE. Only for unit test</description>
    <label>XXX Batch Process</label>
    <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>