force-app/main/default/objects/Opportunity/fields/Full_Time_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Full_Time_Enrollment__c</fullName>
    <label>Full-Time Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>