force-app/main/default/objects/Opportunity/fields/Income_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Income_Schedule__c</fullName>
    <formula>IF (ISPICKVAL(Invoice_Frequency__c,&quot;Semi-Annually&quot;),&quot;6 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Monthly&quot;),&quot;1 month&quot;,  
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Annually&quot;),&quot;12 months&quot;, 
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Quarterly&quot;),&quot;3 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;2 Year (Single Payment)&quot;),&quot;24 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;3 Year (Single Payment)&quot;),&quot;36 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;1 Time&quot;),&quot;6 months&quot;,null)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Schedule</label>
    <type>Text</type>
</CustomField>