force-app/main/default/objects/Opportunity/fields/Introductory_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Introductory_Meeting__c</fullName>
    <label>Deprecated_Introductory Meeting</label>
    <type>Date</type>
</CustomField>