force-app/main/default/objects/Opportunity/fields/Known_Obstacles_for_SALT__c.field-meta.xml
<CustomField>
    <fullName>Known_Obstacles_for_SALT__c</fullName>
    <label>Known Obstacles for SALT</label>
    <length>120</length>
    <type>Text</type>
</CustomField>