force-app/main/default/objects/Opportunity/fields/Lead_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_ID__c</fullName>
    <label>Lead Record Type ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>