force-app/main/default/objects/Opportunity/fields/Lead_to_Opp_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_Opp_Age__c</fullName>
    <formula>TEXT(
 FLOOR( Opportunity_Close_date__c  -  Lead_Created_Date__c )
)  &amp; &quot; Days &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead to Opp Age</label>
    <type>Text</type>
</CustomField>