force-app/main/default/objects/Opportunity/fields/LenderContract_Complete__c.field-meta.xml
<CustomField>
    <fullName>LenderContract_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked/yes when Lender Contracts have been executed/and activated in the contract Custom Object</description>
    <label>Contract Completed?</label>
    <type>Checkbox</type>
</CustomField>