force-app/main/default/objects/Opportunity/fields/Loss__c.field-meta.xml
<CustomField>
    <fullName>Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the opportunity is lost check this box and fill out the loss reasons.</description>
    <inlineHelpText>Don&#39;t forget to choose the loss reasons.</inlineHelpText>
    <label>Loss</label>
    <type>Checkbox</type>
</CustomField>