force-app/main/default/objects/Opportunity/fields/Loss_Stage__c.field-meta.xml
<CustomField>
    <fullName>Loss_Stage__c</fullName>
    <description>What stage of the Sales/Opportunity cycle was the sale lost.</description>
    <label>Loss Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Qualification</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Pre-Implementation</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Assign Resources</fullName>
            </value>
            <value>
                <fullName>Presentation/Info Gathering</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>