force-app/main/default/objects/Opportunity/fields/Need_for_Campus_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Need_for_Campus_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need for Campus Meeting</label>
    <type>Checkbox</type>
</CustomField>