force-app/main/default/objects/Opportunity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule meeting/WebEx</fullName>
            </value>
            <value>
                <fullName>Send follow-up email</fullName>
            </value>
            <value>
                <fullName>Make phone call</fullName>
            </value>
            <value>
                <fullName>Elevate to higher level on campus</fullName>
            </value>
            <value>
                <fullName>Utilize Internal ASA Resources</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>