force-app/main/default/objects/Opportunity/fields/of_days_stalled__c.field-meta.xml
<CustomField>
    <fullName>of_days_stalled__c</fullName>
    <description># of days without activity on this opportunity</description>
    <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate), today() - LastActivityDate, today() - DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of days without activity on this opportunity</inlineHelpText>
    <label># of days stalled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>