force-app/main/default/objects/Opportunity/fields/Opportunity_Close_date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Close_date__c</fullName>
    <label>Opportunity Close date</label>
    <type>Date</type>
</CustomField>