force-app/main/default/objects/Opportunity/fields/OppWorkflowFired__c.field-meta.xml
<CustomField>
    <fullName>OppWorkflowFired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OppWorkflowFired?</label>
    <type>Checkbox</type>
</CustomField>