force-app/main/default/objects/Opportunity/fields/Opt_out_of_Publicity__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_Publicity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated Opt out of Publicity</label>
    <type>Checkbox</type>
</CustomField>