force-app/main/default/objects/Opportunity/fields/Other_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Other_Next_Step__c</fullName>
    <label>Other Next Step</label>
    <length>150</length>
    <type>Text</type>
</CustomField>