force-app/main/default/objects/Opportunity/fields/Partnership_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Opportunity__c</fullName>
    <inlineHelpText>This field describes different flavors of Opportunities with possible third parties.</inlineHelpText>
    <label>Partnership Opportunity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QSP: Prospective Source</fullName>
            </value>
            <value>
                <fullName>Non-QSP: Performance Based Revenue</fullName>
            </value>
            <value>
                <fullName>Content (Member Benefit)</fullName>
            </value>
            <value>
                <fullName>Capability (Member Benefit)</fullName>
            </value>
            <value>
                <fullName>Career Related (Member Benefit)</fullName>
            </value>
            <value>
                <fullName>Personal/Self Discovery (Member Benefit)</fullName>
            </value>
            <value>
                <fullName>CSR/PR Opp: ASA Sponsored Expenditure</fullName>
            </value>
            <value>
                <fullName>Corporate Offering</fullName>
            </value>
            <value>
                <fullName>Foundation Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>