force-app/main/default/objects/Opportunity/fields/Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Amount__c</fullName>
    <description>Field to capture Amount or List price based on Stage for executive reporting.</description>
    <formula>IF(  OR(ISPICKVAL( StageName ,  &quot;Discovery&quot; ),ISPICKVAL( StageName , &quot;Prospect&quot;),ISPICKVAL( StageName ,&quot;Proposal&quot;)),  List_Price__c ,  Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field to capture Amount or List price based on Stage for executive reporting.</inlineHelpText>
    <label>Pipeline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>