force-app/main/default/objects/Opportunity/fields/Price_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Price_Conversation__c</fullName>
    <label>Price Conversation</label>
    <type>Date</type>
</CustomField>