force-app/main/default/objects/Opportunity/fields/Pricing_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Put a checkmark in this field if you have encountered concerns about product pricing during sales conversations.</inlineHelpText>
    <label>Pricing Concerns</label>
    <type>Checkbox</type>
</CustomField>